--- a/progect_for_portfolio/css/style.css
+++ b/progect_for_portfolio/css/style.css
@@ -7,34 +7,46 @@
       transform: translateX(0);
     }
   }
-  .header{
-      background-color: #fff;
-  }
+  
+  
   body {
     margin: 0;
     padding: 0;
+  }
+  header{
+      position: fixed;
+      z-index: 999;
+      width: 100%;
+      height: 30px;
   }
   
   h1 {
     position: relative;
     font-family: "Montserrat", sans-serif;
-    font-size: 6rem;
+    font-size: 6em;
     font-weight: 700;
   }
   
   h2 {
     position: relative;
     font-family: "Montserrat", sans-serif;
-    font-size: 5rem;
+    font-size: 5em;
     font-weight: 700;
   }
   h3{
       font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: 700;
     
   
   }
+  h4{
+    position: relative;
+    font-family: "Montserrat", sans-serif;
+  font-size: 2em;
+  font-weight: 700;}
+
+  
   
   p {
     position: relative;
@@ -44,10 +56,9 @@
   }
   
   .main_page {
-    margin-top: 40px;
     display: flex;
     min-height: 100vh;
-    padding: 8px 50px;
+    padding:82px 50px 8px;
     background-color: #02f;
     background-image: url("/progect_for_portfolio/img/bg.svg");
     background-repeat: no-repeat;
@@ -67,7 +78,7 @@
   
   .article {
     position: relative;
-    min-height: 100vh;
+    min-height: 55em;
     padding: 8px 50px;
   }
   
@@ -100,72 +111,9 @@
     background-image: url("/progect_for_portfolio/img/first_bg.jpg");
   }
   
-  .article_second {
-    background-image: url("/progect_for_portfolio/img/second_bg.jpg");
-  }
   
-  .form {
-    position: relative;
-    width: 500px;
-    margin: 0 auto;
-    text-align: center;
-  }
   
-  .form_input,
-  .form_textarea {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    margin-bottom: 16px;
-    padding: 8px 16px;
-    transition: transform 0.3s ease-out;
-    color: #02f;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    background-color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
-  }
-  
-  .form_input::-webkit-input-placeholder,
-  .form_textarea::-webkit-input-placeholder {
-    opacity: 0.6;
-    color: #02f;
-  }
-  
-  .form_input:focus,
-  .form_textarea:focus {
-    transition: transform 0.3s ease-out;
-    transform: scale(1.02, 1.02);
-  }
-  
-  .form_textarea {
-    resize: none;
-  }
-  
-  .form_button {
-    display: inline-block;
-    padding: 12px 32px;
-    transition: all 0.3s ease-out;
-    text-transform: uppercase;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    background-color: #02f;
-    background-clip: border-box;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.5em;
-    font-weight: 700;
-  }
-  
-  .form_button:hover {
-    transition: all 0.3s ease-out;
-    transform: scale(1.02, 1.02);
-    box-shadow: rgba(255, 255, 255, 0.3) 0 0 16px 2px;
-  }
+
   
   .black {
     color: #000;
@@ -174,3 +122,21 @@
   .white {
     color: #fff;
   }
+  .slick-prev {
+    left: 0px;
+   
+}
+
+
+#Портфолио:before {
+	display: block;
+	content: "";
+	height: 85px;
+	margin:  -85px 0 0;
+} 
+#Контакты:before {
+	display: block;
+	content: "";
+	height :85px;
+	margin: -85px 0 0;
+} 
