--- a/progect_for_portfolio/less/main.css
+++ b/progect_for_portfolio/less/main.css
@@ -3,21 +3,21 @@
   border-radius: 7px;
 }
 .portfolio-block {
-  margin: 2rem 2rem;
+  margin: 1.5em 1.7em;
   text-align: center;
 }
 .portfolio-block h3 {
-  margin-top: 1.5rem;
+  margin-top: 1.5em;
 }
 .portfolio-block p {
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
+  font-size: 1.2em;
+  margin-bottom: 1.5em;
 }
 .portfolio-img img {
   border-radius: 7px;
   display: block;
   margin: 0 auto;
-  height: 190px;
+  height: 176px ;
 }
 .slick-active {
   outline: none;
