--- a/progect_for_portfolio/less/main.less
+++ b/progect_for_portfolio/less/main.less
@@ -5,31 +5,36 @@
    
         
     &-block{
-        margin: 2rem 2rem;
+        
+        margin: 1.5em 1.7em;
 
         
         text-align: center;
         h3{
-            margin-top: 1.5rem; 
+            margin-top: 1.5em; 
         }
         p{
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
+            font-size: 1.2em;
+            margin-bottom: 1.5em;
         } 
         }
     &-img {
         img{
+
             border-radius: 7px;
             display: block;
             margin: 0 auto;
-            height: 190px;
+            height: 176px ;
         }
     
     }
 
 }
+
+
 .slick-active{
     outline:none;
 }
 
+     
 
